--- a/app/src/main/res/layout-sw600dp/main_activity.xml
+++ b/app/src/main/res/layout-sw600dp/main_activity.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/master_detail_wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:divider="?attr/dividerHorizontal"
-    android:orientation="horizontal"
-    android:showDividers="middle"
     tools:context=".activity.MainActivity">
-
-    <androidx.fragment.app.FragmentContainerView
-        android:name="com.wireguard.android.fragment.TunnelListFragment"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/master_detail_wrapper"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:tag="LIST" />
+        android:baselineAligned="false"
+        android:divider="?attr/dividerHorizontal"
+        android:orientation="horizontal"
+        android:showDividers="middle">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/detail_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3" />
-</LinearLayout>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/list_fragment"
+            android:name="com.wireguard.android.fragment.TunnelListFragment"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:tag="LIST" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/detail_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3" />
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
