--- a/ui/src/main/res/xml/preferences.xml
+++ b/ui/src/main/res/xml/preferences.xml
@@ -8,6 +8,12 @@
         android:title="@string/restore_on_boot_title" />
     <com.wireguard.android.preference.ModuleDownloaderPreference android:key="module_downloader" />
     <com.wireguard.android.preference.ToolsInstallerPreference android:key="tools_installer" />
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="multiple_tunnels"
+        android:summaryOff="@string/multiple_tunnels_summary_off"
+        android:summaryOn="@string/multiple_tunnels_summary_on"
+        android:title="@string/multiple_tunnels_title" />
     <com.wireguard.android.preference.ZipExporterPreference />
     <com.wireguard.android.preference.LogExporterPreference />
     <CheckBoxPreference
