--- a/ui/src/main/res/xml/preferences.xml
+++ b/ui/src/main/res/xml/preferences.xml
@@ -23,4 +23,5 @@
         android:summaryOff="@string/dark_theme_summary_off"
         android:summaryOn="@string/dark_theme_summary_on"
         android:title="@string/dark_theme_title" />
+    <com.wireguard.android.preference.KernelModuleDisablerPreference android:key="kernel_module_disabler" />
 </androidx.preference.PreferenceScreen>
