Introduce realtime log viewer
This contains a share button and a save button, the former using a
custom content provider.

Co-authored-by: Jason A. Donenfeld <Jason@zx2c4.com>
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/src/main/res/values/colors.xml
+++ b/ui/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/secondary_color</color>
     <color name="white">#ffffffff</color>
 
+    <!-- Log viewer tag colors -->
+    <color name="debug_tag_color">#444444</color>
+    <color name="error_tag_color">#aa0000</color>
+    <color name="info_tag_color">#00aa00</color>
+    <color name="warning_tag_color">#aaaa00</color>
 </resources>
