--- a/ui/src/main/res/values-night/colors.xml
+++ b/ui/src/main/res/values-night/colors.xml
@@ -14,4 +14,10 @@
     <color name="list_multiselect_background">#1aeeeeee</color>
     <color name="status_bar_color">#21242424</color>
     <color name="navigation_bar_color">#aa242424</color>
+
+    <!-- Log viewer tag colors -->
+    <color name="debug_tag_color">#aaaaaa</color>
+    <color name="error_tag_color">#ff0000</color>
+    <color name="info_tag_color">#00ff00</color>
+    <color name="warning_tag_color">#ffff00</color>
 </resources>
