--- a/ui/src/main/res/xml/preferences.xml
+++ b/ui/src/main/res/xml/preferences.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.wireguard.android.preference.VersionPreference android:icon="@mipmap/ic_launcher" />
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="settings">
+    <com.wireguard.android.preference.VersionPreference android:icon="@mipmap/ic_launcher" android:key="version" />
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="restore_on_boot"
         android:summaryOn="@string/restore_on_boot_summary_on"
         android:summaryOff="@string/restore_on_boot_summary_off"
         android:title="@string/restore_on_boot_title" />
-    <com.wireguard.android.preference.ZipExporterPreference />
+    <com.wireguard.android.preference.ZipExporterPreference android:key="zip_exporter" />
     <Preference
         android:key="log_viewer"
         android:title="@string/log_viewer_title"
