--- a/ui/src/main/res/drawable/list_item_background.xml
+++ b/ui/src/main/res/drawable/list_item_background.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item>
         <selector>
-            <item app:state_multiselected="true" android:state_activated="true">
+            <item
+                android:state_activated="true"
+                app:state_multiselected="true">
                 <color android:color="?attr/colorMultiselectActiveBackground" />
             </item>
         </selector>
