--- a/ui/src/main/res/layout/tunnel_list_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_list_fragment.xml
@@ -17,7 +17,7 @@
 
         <variable
             name="tunnels"
-            type="com.wireguard.android.util.ObservableKeyedList&lt;String, ObservableTunnel&gt;" />
+            type="com.wireguard.android.databinding.ObservableKeyedArrayList&lt;String, ObservableTunnel&gt;" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
