--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -11,84 +12,91 @@
             type="com.wireguard.config.Peer" />
     </data>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
-        android:background="?attr/colorBackground"
-        app:cardCornerRadius="4dp"
+        android:layout_margin="8dp"
+        app:cardBackgroundColor="?attr/elevationOverlayColor"
+        app:cardCornerRadius="0dp"
         app:cardElevation="2dp"
         app:contentPadding="8dp">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/peer_title"
-                style="?android:attr/textAppearanceMedium"
+                style="@style/TextAppearance.MaterialComponents.Headline6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:text="@string/peer" />
+                android:text="@string/peer"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
                 android:id="@+id/public_key_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/peer_title"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/public_key_text"
-                android:text="@string/public_key" />
+                android:text="@string/public_key"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/peer_title"/>
 
             <TextView
                 android:id="@+id/public_key_text"
-                style="?android:attr/textAppearanceMedium"
+                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/public_key_label"
                 android:contentDescription="@string/public_key_description"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:onClick="@{ClipboardUtils::copyTextView}"
-                android:text="@{item.publicKey.toBase64}" />
+                android:text="@{item.publicKey.toBase64}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/public_key_label"
+                tools:text="wOs2eguFEohqIZxlSJ1CAT9584tc6ejj9hfGFsoBVkA="/>
 
             <TextView
                 android:id="@+id/allowed_ips_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/public_key_text"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/allowed_ips_text"
-                android:text="@string/allowed_ips" />
+                android:text="@string/allowed_ips"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/public_key_text"/>
 
             <TextView
                 android:id="@+id/allowed_ips_text"
-                style="?android:attr/textAppearanceMedium"
+                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/allowed_ips_label"
-                android:text="@{item.allowedIps}" />
+                android:text="@{item.allowedIps}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/allowed_ips_label"
+                tools:text="0.0.0.0/5, 8.0.0.0/7, 11.0.0.0/8, 12.0.0.0/6, 16.0.0.0/4, 32.0.0.0/3"/>
 
             <TextView
                 android:id="@+id/endpoint_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/allowed_ips_text"
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/endpoint_text"
-                android:text="@string/endpoint" />
+                android:text="@string/endpoint"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/allowed_ips_text"/>
 
             <TextView
                 android:id="@+id/endpoint_text"
-                style="?android:attr/textAppearanceMedium"
+                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/endpoint_label"
-                android:text="@{item.endpoint}" />
+                android:text="@{item.endpoint}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/endpoint_label"
+                tools:text="192.168.0.1:51820" />
 
             <TextView
                 android:id="@+id/transfer_label"
@@ -98,15 +106,22 @@
                 android:layout_marginTop="8dp"
                 android:labelFor="@+id/transfer_text"
                 android:text="@string/transfer"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/endpoint_text"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/transfer_text"
-                style="?android:attr/textAppearanceMedium"
+                style="@style/DetailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/transfer_label"
-                android:visibility="gone" />
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/transfer_label"
+                tools:visibility="visible"
+                tools:text="1024 MB" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
