--- a/ui/src/main/res/layout/tunnel_editor_peer.xml
+++ b/ui/src/main/res/layout/tunnel_editor_peer.xml
@@ -17,145 +17,156 @@
             type="com.wireguard.android.viewmodel.PeerProxy" />
     </data>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
-        android:background="?attr/colorBackground"
-        app:cardCornerRadius="4dp"
+        app:cardBackgroundColor="?attr/elevationOverlayColor"
+        app:cardCornerRadius="0dp"
         app:cardElevation="2dp"
         app:contentPadding="8dp">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/peer_title"
-                style="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
+                style="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="8dp"
-                android:layout_toStartOf="@+id/peer_action_delete"
-                android:text="@string/peer" />
+                android:text="@string/peer"
+                android:layout_margin="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/public_key_label_layout"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-            <ImageButton
-                android:id="@+id/peer_action_delete"
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/delete"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:background="@null"
-                android:contentDescription="@string/delete"
                 android:onClick="@{() -> item.unbind()}"
-                android:src="@drawable/ic_action_delete" />
+                android:src="@drawable/ic_action_delete"
+                android:padding="8dp"
+                android:background="@null"
+                app:layout_constraintBaseline_toBaselineOf="@id/peer_title"
+                app:layout_constraintTop_toTopOf="@id/peer_title"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/public_key_label"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/public_key_label_layout"
+                style="@style/TextInputLayoutBase"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/peer_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/pre_shared_key_label_layout">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/public_key_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textNoSuggestions|textVisiblePassword"
+                    android:text="@={item.publicKey}"
+                    android:hint="@string/public_key"
+                    app:filter="@{KeyInputFilter.newInstance()}"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/pre_shared_key_label_layout"
+                style="@style/TextInputLayoutBase"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                app:layout_constraintTop_toBottomOf="@+id/public_key_label_layout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/pre_shared_key_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/pre_shared_key"
+                    android:inputType="textNoSuggestions|textVisiblePassword"
+                    android:text="@={item.preSharedKey}"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/persistent_keepalive_label_layout"
+                style="@style/TextInputLayoutBase"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/pre_shared_key_label_layout"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/persistent_keepalive_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/persistent_keepalive"
+                    android:inputType="number"
+                    android:text="@={item.persistentKeepalive}" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/endpoint_label_layout"
+                style="@style/TextInputLayoutBase"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/peer_title"
-                android:labelFor="@+id/public_key_text"
-                android:text="@string/public_key" />
+                android:layout_margin="4dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/persistent_keepalive_label_layout">
 
-            <EditText
-                android:id="@+id/public_key_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/public_key_label"
-                android:inputType="textNoSuggestions|textVisiblePassword"
-                android:text="@={item.publicKey}"
-                app:filter="@{KeyInputFilter.newInstance()}" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/endpoint_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:inputType="textNoSuggestions|textVisiblePassword"
+                    android:hint="@string/endpoint"
+                    android:text="@={item.endpoint}"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/pre_shared_key_label"
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/allowed_ips_label_layout"
+                style="@style/TextInputLayoutBase"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/public_key_text"
-                android:labelFor="@+id/pre_shared_key_text"
-                android:text="@string/pre_shared_key" />
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintTop_toBottomOf="@id/endpoint_label_layout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-            <EditText
-                android:id="@+id/pre_shared_key_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pre_shared_key_label"
-                android:hint="@string/hint_optional"
-                android:inputType="textNoSuggestions|textVisiblePassword"
-                android:text="@={item.preSharedKey}" />
-
-            <TextView
-                android:id="@+id/allowed_ips_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pre_shared_key_text"
-                android:layout_toStartOf="@+id/exclude_private_ips"
-                android:labelFor="@+id/allowed_ips_text"
-                android:text="@string/allowed_ips" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/allowed_ips_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textNoSuggestions|textVisiblePassword"
+                    android:hint="@string/allowed_ips"
+                    android:text="@={item.allowedIps}"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <CheckBox
-                android:id="@+id/exclude_private_ips"
+                android:id="@+id/excluded_checkbox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/allowed_ips_label"
-                android:layout_alignParentEnd="true"
-                android:checked="@={item.excludingPrivateIps}"
+                android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="0dp"
                 android:text="@string/exclude_private_ips"
-                android:visibility="@{item.ableToExcludePrivateIps ? View.VISIBLE : View.GONE}" />
+                android:visibility="@{item.ableToExcludePrivateIps ? View.VISIBLE : View.GONE}"
+                android:checked="@={item.excludingPrivateIps}"
+                app:layout_constraintTop_toBottomOf="@id/allowed_ips_label_layout"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-            <EditText
-                android:id="@+id/allowed_ips_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/allowed_ips_label"
-                android:inputType="textNoSuggestions|textVisiblePassword"
-                android:text="@={item.allowedIps}" />
-
-            <TextView
-                android:id="@+id/endpoint_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/allowed_ips_text"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/persistent_keepalive_label"
-                android:labelFor="@+id/endpoint_text"
-                android:text="@string/endpoint" />
-
-            <EditText
-                android:id="@+id/endpoint_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/endpoint_label"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@+id/persistent_keepalive_text"
-                android:inputType="textNoSuggestions|textVisiblePassword"
-                android:text="@={item.endpoint}" />
-
-            <TextView
-                android:id="@+id/persistent_keepalive_label"
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/endpoint_label"
-                android:layout_alignParentEnd="true"
-                android:labelFor="@+id/persistent_keepalive_text"
-                android:text="@string/persistent_keepalive" />
-
-            <EditText
-                android:id="@+id/persistent_keepalive_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/endpoint_text"
-                android:layout_alignStart="@+id/persistent_keepalive_label"
-                android:layout_alignParentEnd="true"
-                android:hint="@string/hint_optional"
-                android:inputType="number"
-                android:text="@={item.persistentKeepalive}"
-                android:textAlignment="center" />
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
