--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
-    <style name="MediumText" parent="@android:style/TextAppearance.DeviceDefault.Medium" />
+    <style name="DetailText" parent="TextAppearance.MaterialComponents.Body1" />
 
     <style name="TextInputLayoutBase" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="boxStrokeColor">?attr/colorSecondary</item>
