--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -80,7 +80,7 @@
 
                 <TextView
                     android:id="@+id/interface_name_text"
-                    style="@style/MediumText"
+                    style="@style/DetailText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{tunnel.name}"
@@ -100,7 +100,7 @@
 
                 <TextView
                     android:id="@+id/public_key_text"
-                    style="@style/MediumText"
+                    style="@style/DetailText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/public_key_description"
@@ -124,7 +124,7 @@
 
                 <TextView
                     android:id="@+id/addresses_text"
-                    style="@style/MediumText"
+                    style="@style/DetailText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/addresses"
